k8s_manifest/deployment_userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: userservice # Service_user.yaml будет смотреть на этот лейбл Подов
    spec:
      containers:
        - name: userproject
          image: johnynice/projectuser11:1
          #imagePullPolicy: IfNotPresent #Использовать образ из DockerHUb, если не нашли локально
          ports:
            - containerPort: 8080
          envFrom: # <-- вот здесь подключаем ConfigMap
            - configMapRef:
                name: userservice-config
