k8s_manifest/service_appUser.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-appuser
  labels:
    app: userservice
spec:
  selector:
    app: userservice # Выбираем Pods с этим лейблом
  ports:
    - name: http
      protocol  : TCP
      port      : 80 # Port on Service
      targetPort: 8080 # Port on Pod
  type: ClusterIP
