k8s_manifest/service_pg.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres # Выбираем Pods с этим лейблом
  ports:
    - name: postgresql
      protocol  : TCP
      port      : 5432 # Port on Service
      targetPort: 5432 # Port on Pod
