k8s_manifest/ingress_appuser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-appuser
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework # Общий хост
      http:
        paths:
          # Маршрут для user-service
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: service-appuser  # Kubernetes Service для user-service
                port:
                  number: 80

          # Маршрут для auth-service
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service  # Имя Service для auth-service
                port:
                  number: 80

          # Маршрут для billing_service
          - path: /api/billing
            pathType: Prefix
            backend:
              service:
                name: billing-service  # Имя Service для billing_service
                port:
                  number: 80

          # Маршрут для order_service
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service  # Имя Service для order_service
                port:
                  number: 80

          # Маршрут для notifi_service
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notifi-service  # Имя Service для order_service
                port:
                  number: 80
